ACCOUNTS.txt
89shiroikuro:
make tiling layout set be a per-workspace configuration; if in a workspace i switch to monocle, other workspaces should remain on the default set tiling layout.
- Enable a setting in config.toml that converts workspace set to a global configuration setting, making it so switching to a different tiling layout switches it across all workspaces, just like how it currently works.

a251366:
install
└─ install hana
   └─ compile exe hana ReleaseFast native 2 errors
src/tiling/tiling.zig:51:38: error: redundant comptime keyword in already comptime scope
const LAYOUT_CYCLE: []const Layout = comptime blk: {
                                     ^~~~~~~~
src/tiling/tiling.zig:24:32: error: no module named 'layout_options' available within module 'tiling'
const layout_options = @import("layout_options");
                               ^~~~~~~~~~~~~~~~
referenced by:
    retile: src/tiling/tiling.zig:551:12
    retileIfDirty: src/tiling/tiling.zig:522:11
    main: src/core/main.zig:288:33
    callMain [inlined]: /root/.zvm/master/lib/std/start.zig:675:59
    callMainWithArgs [inlined]: /root/.zvm/master/lib/std/start.zig:626:20
    main: /root/.zvm/master/lib/std/start.zig:652:28
    comptime: /root/.zvm/master/lib/std/start.zig:31:26
    start: /root/.zvm/master/lib/std/std.zig:107:27
    comptime: /root/.zvm/master/lib/std/std.zig:206:9
error: 2 compilation errors
install transitive failure
└─ install hana transitive failure
   └─ compile exe hana ReleaseFast native 2 errors
